Fixed tag sort issue Added hover css for selection Adjusted padding Cleaned up a few files spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,20 @@ a {
 }
 
 
+.tagitem
+{
+  margin-left: 10px;
+}
+
+.tagitem:hover
+{
+   background-color: white;
+    color: black;
+    border-style: dashed;
+    border-width: 2px;
+    border-color: red;
+}
+
 .cover {
   display: block;
   background-color: black;
